feat: 动态工具选择和LSP自动委托
主要更新：
1. 实现动态工具选择(skill-based tool selection)机制
   - AppConfig.SkillConfig 支持 tools 列表
   - ToolFactory 支持按 skill 过滤工具
   - App.java 支持 --skill CLI 参数

2. LSP 语法检查优化
   - initializeLsp/shutdownLsp 改为内部自动调用
   - 合并 getLspStatus 和 getJdtLsInfo
   - 实现 registerCapability/unregisterCapability
   - SyntaxCheckerTool 自动委托给 LSP（当 LSP 启用时）

3. 修复问题
   - SyntaxCheckerTool 的 projectRoot 初始化
   - JdtLsManager 直接启动 Java 而非 Python 脚本

4. 更新文档
   - CLAUDE.md、README.md、README_zh.md
   - 新增 doc/plan-0114.md